tests/errors/std-vec-insert-in-different-zone.ari
fn main() -> i64 {
  var zone = zone::create(64);
  var other = zone::create(64);
  var vec = std::vec::new<i64>(ref mut zone, 1);
  vec.insert_in(ref mut other, 0, 2);
  zone::destroy(other);
  zone::destroy(zone);
  return 0;
}
